// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-user-billing-information-card.vue initial display should be rendered correctly when payment method is withdrawal 1`] = `
<div>
  <div
    class="z-data-card-stub"
    title="請求情報"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M7,2H17A2,2 0 0,1 19,4V20A2,2 0 0,1 17,22H7A2,2 0 0,1 5,20V4A2,2 0 0,1 7,2M7,4V8H17V4H7M7,10V12H9V10H7M11,10V12H13V10H11M15,10V12H17V10H15M7,14V16H9V14H7M11,14V16H13V14H11M15,14V16H17V14H15M7,18V20H9V18H7M11,18V20H13V18H11M15,18V20H17V18H15Z"
      label="請求結果"
      value="未処理"
    />
    <z-data-card-item-stub
      label="振替結果"
      value="預金者都合"
    />
    <z-data-card-item-stub
      icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
      label="合計金額"
      value="207,510円"
    />
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="発行日"
    >
      <time
        datetime="2008-07-31"
      >
        平成20年7月31日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z"
      label="サービス提供年月"
    >
      平成23年6月
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="口座振替日"
    >
      <time
        datetime="2014-08-12"
      >
        平成26年8月12日
      </time>
    </z-data-card-item-stub>
    <!---->
    <!---->
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-progress-stub
    message="処理中です。しばらくお待ちください。"
    opacity="0.8"
    zindex="7"
  />
  <z-date-confirm-dialog-stub
    max="2018-05-17T09:00:00.000+09:00"
    message="入金日を選択してください"
    positivelabel="登録"
  />
</div>
`;

exports[`z-user-billing-information-card.vue initial display should be rendered correctly when result is paid 1`] = `
<div>
  <div
    class="z-data-card-stub"
    title="請求情報"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M7,2H17A2,2 0 0,1 19,4V20A2,2 0 0,1 17,22H7A2,2 0 0,1 5,20V4A2,2 0 0,1 7,2M7,4V8H17V4H7M7,10V12H9V10H7M11,10V12H13V10H11M15,10V12H17V10H15M7,14V16H9V14H7M11,14V16H13V14H11M15,14V16H17V14H15M7,18V20H9V18H7M11,18V20H13V18H11M15,18V20H17V18H15Z"
      label="請求結果"
      value="入金済"
    />
    <!---->
    <z-data-card-item-stub
      icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
      label="合計金額"
      value="207,510円"
    />
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="発行日"
    >
      <time
        datetime="2008-07-31"
      >
        平成20年7月31日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z"
      label="サービス提供年月"
    >
      平成23年6月
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="お支払期限日"
    >
      <time
        datetime="2019-05-30"
      >
        令和1年5月30日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="入金日"
    >
      <time
        datetime="1982-06-01"
      >
        昭和57年6月1日
      </time>
    </z-data-card-item-stub>
    <v-card-actions-stub
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <!---->
      <a
        class="v-btn-stub"
        color="primary"
        text=""
      >
        入金日を削除する
      </a>
    </v-card-actions-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-progress-stub
    message="処理中です。しばらくお待ちください。"
    opacity="0.8"
    zindex="7"
  />
  <z-date-confirm-dialog-stub
    max="2018-05-17T09:00:00.000+09:00"
    message="入金日を選択してください"
    positivelabel="登録"
  />
</div>
`;

exports[`z-user-billing-information-card.vue initial display should be rendered correctly when result is pending 1`] = `
<div>
  <div
    class="z-data-card-stub"
    title="請求情報"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M7,2H17A2,2 0 0,1 19,4V20A2,2 0 0,1 17,22H7A2,2 0 0,1 5,20V4A2,2 0 0,1 7,2M7,4V8H17V4H7M7,10V12H9V10H7M11,10V12H13V10H11M15,10V12H17V10H15M7,14V16H9V14H7M11,14V16H13V14H11M15,14V16H17V14H15M7,18V20H9V18H7M11,18V20H13V18H11M15,18V20H17V18H15Z"
      label="請求結果"
      value="未処理"
    />
    <!---->
    <z-data-card-item-stub
      icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
      label="合計金額"
      value="207,510円"
    />
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="発行日"
    >
      <time
        datetime="2008-07-31"
      >
        平成20年7月31日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z"
      label="サービス提供年月"
    >
      平成23年6月
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="お支払期限日"
    >
      <time
        datetime="2019-05-30"
      >
        令和1年5月30日
      </time>
    </z-data-card-item-stub>
    <!---->
    <v-card-actions-stub
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        text=""
      >
        入金日を登録する
      </a>
      <!---->
    </v-card-actions-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-progress-stub
    message="処理中です。しばらくお待ちください。"
    opacity="0.8"
    zindex="7"
  />
  <z-date-confirm-dialog-stub
    max="2018-05-17T09:00:00.000+09:00"
    message="入金日を選択してください"
    positivelabel="登録"
  />
</div>
`;
